Some course refactor